# chat-deck

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml  tsconfig.json
src/: app.tsx  index.tsx
src/lib/: agent-prompts.ts  agent-state.ts  app-state.ts  clipboard.ts  codex-session.ts  codex-ui.ts  controller.ts  history.ts  inbox.ts  paths.ts  router.ts  task-done.ts  tmux.ts  types.ts  worker-runtime.ts
src/relay_deck/: __init__.py  __main__.py  app.py  controller.py  events.py  models.py  orchestrator.py  registry.py  router.py  runtime_events.py  tmux_manager.py
src/relay_deck/adapters/: __init__.py  base.py  claude_code.py  cli.py  codex.py  mock.py  tmux.py
src/relay_deck/widgets/: __init__.py  agent_sidebar.py  agent_table.py  detail_panel.py  history_input.py  status_bar.py
tests/: agent-prompts.test.ts  agent-state.test.ts  app-state.test.ts  clipboard.test.ts  codex-session.test.ts  codex-ui.test.ts  controller.test.ts  history.test.ts  router.test.ts  runtime.test.ts  task-done.test.ts  test_app.py  test_controller.py  test_main.py  test_registry.py  test_router.py  test_runtime_events.py  test_tmux_adapter.py  test_tmux_manager.py  tmux.test.ts
