[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-deck"
version = "0.1.0"
description = "Chat-first multi-agent TUI for Claude Code and Codex, built with Python, Textual, and tmux."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "rich>=13.7.0",
  "textual>=0.58.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
chat-deck = "relay_deck.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
